--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/chrome": "^0.0.304",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
